# object_keypoints

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
config/: autoinjector.json  calibration.yaml  cups.json  cups.rviz  cups_4.json  cups_replay.rviz  realsense_D415.yaml  valve.json  video.py
launch/: data_replay.launch  keypoints.launch
lightning_logs/version_0/: events.out.tfevents.1641833207.boyang-HP-Pavilion-Laptop-14-ce2xxx.41917.0  hparams.yaml
models/: cups_depth.pt  modelv2.pt
notebooks/: DataloadingTest.ipynb  ModelBench.ipynb  OverfittingTest.ipynb  keypoint_debug.ipynb
notebooks/.ipynb_checkpoints/: debug-checkpoint.ipynb
perception/: constants.py  loss.py  models.py  pipeline.py
perception/corner_net_lite/core/models/py_utils/: modules.py
perception/datasets/: utils.py  video.py
perception/utils/: __init__.py  camera_utils.py  clustering_utils.py  linalg.py  ros.py  timer.py
scripts/: collect_bags.py  constants.py  encode_bag.py  eval_model.py  install.sh  label.py  label_qt.py  make_video.sh  package_model.py  run_pipeline.py  show_keypoints.py  train.py  uninstall.sh  utils.py  vis_kp.py
test/: test_pipeline.py  test_video_dataset.py
test/utils/: test_ros.py
