<?xml version="1.0"?>
<package format="2">
  <name>object_keypoints</name>
  <version>0.1.0</version>
  <description>Tracking keypoints on objects.</description>

  <maintainer email="kblomqvist@mavt.ethz.ch">fjulian</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>

</package>
